--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pug": "^2.0.0-beta11",
     "read-chunk": "^2.0.0",
     "serve-favicon": "~2.3.2",
+    "winston": "^2.3.1",
     "ws": "^2.2.0"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@types/method-override": "0.0.29",
     "@types/morgan": "^1.7.32",
     "@types/serve-favicon": "^2.2.28",
+    "@types/winston": "^2.2.0",
     "@types/ws": "0.0.39",
     "pre-commit": "^1.2.2",
     "tslint": "^4.5.1",
